tests/vendor/valid/simple/postfix_in_ternary.c
//expect 9
//tags: simple, conditional
int main() {
    int x = 10;
    x - 10 ? 0 : x--;
    return x;
}