tests/vendor/invalid/semantics/assign_fun_to_variable.c
//tags: functions
int x();
int main() {
    int a = 10;
    a = x;
    return 0;
}